# teste

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb
src/teste/: __init__.py  test_teste.py  teste.py
tests/: test_teste.py
