[tool.poetry]
name = "teste"
version = "0.1.0"
description = "nippon"
authors = ["Alan Nakamura"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.1"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
